<resources>
    <string name="app_name">MGC-PR02-Exchange</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="pound">Pound</string>
    <string name="toCurrency">To currency</string>
    <string name="amount">Amount</string>
    <string name="fromCurrency">From currency</string>
    <string name="initialAmount">0.00</string>
    <string name="exchange">EXCHANGE</string>
</resources>
